--- a/app/views/bulk_discounts/index.html.erb
+++ b/app/views/bulk_discounts/index.html.erb
@@ -1,12 +1,18 @@
+<h2> All Discounts: </h2>
 <% @bulk_discounts.each do |bulk_discount| %>
   <section id="bulk_discount-<%= bulk_discount.id %>">
     <li> <%= link_to "#{bulk_discount.name}", merchant_bulk_discount_path(bulk_discount.merchant, bulk_discount) %> :
-    - <%= bulk_discount.percentage_discount %> Percentage Discount
-    - <%= bulk_discount.quantity_threshold %> Quantity Threshold
+     <%= bulk_discount.percentage_discount %> Percent Discount,
+     Quantity Threshold: <%= bulk_discount.quantity_threshold %>
     </li>
   </section>
 <% end %>
 
-<section id="Upcoming_Holidays">
-  <h3> Upcoming Holidays </h3>
+<section id="upcoming_holidays">
+  <h3> Upcoming Holidays: </h3>
+ <% @holiday_service.next_3_holidays.each do |holiday| %>
+    <li>
+     <%= holiday[:name]  %>
+    </li>
+  <% end %>
 </section>
