Change total_revenue method to total_revenue_without discounts

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -51,7 +51,7 @@
   <section id="top_5">
     <% @merchant.top_5_items.each do |item| %>
       <li><%= link_to "#{item.name}", merchant_item_path(@merchant, item)  %> -
-        $<%= item.total_revenue %> in sales</li>
+        $<%= item.total_revenue_without_discounts %> in sales</li>
       <p> Top selling date for <%= item.name %> was <%= item.best_day %> </p>
     <% end %>
   </section>
