--- a/app/views/admin/merchants/index.html.erb
+++ b/app/views/admin/merchants/index.html.erb
@@ -19,7 +19,7 @@
   <ul class='mr-auto col-sm-4'>
     <% @merchants.top_merchants.each do |m| %>
       <section id="toppy-<%= m.id %>">
-        <li><%= link_to "#{m.name}", admin_merchant_path(m) %> - $<%= m.total_revenue %> in sales</li>
+        <li><%= link_to "#{m.name}", admin_merchant_path(m) %> - $<%= m.total_revenue_without_discounts %> in sales</li>
       </section>
       <section id="top-<%= m.id %>">
         <p>Top Selling Date for <%= m.name %> was on <%= m.best_day.strftime("%_m/%d/%Y") %></p>
