--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -19,6 +19,8 @@
 
   <p> Created on: <%= @invoice.created_at.strftime("%A, %B %-d, %Y") %></p>
   <p>Total Revenue: <%= @invoice.total_revenue_without_discounts %></p>
+  <p>Total Revenue with Discounts: <%= @invoice.total_revenue_with_discounts %></p>
+
 
 
   <h4>Customer:</h4>
