--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -35,6 +35,7 @@
         <th class="th1">Quantity</th>
         <th class="th1">Unit Price</th>
         <th class="th1">Status</th>
+        <th class="th1">Bulk Discounts</th>
       </tr>
     </thead>
 
@@ -49,6 +50,13 @@
                                             <%= f.select :status, Invoice.statuses.keys, selected: "#{@invoice.status}" %>
                                             <%= f.submit 'Update Invoice' %>
                                           <% end %></td><br/>
+            <td style="text-align:center">
+              <% if i.invoice.has_discounts?(i.id) %>
+                <p> <%= link_to "#{i.invoice.name_of_applied_discount(i.id)}", merchant_bulk_discount_path(@merchant, i.invoice.applied_bulk_discount(i.id)) %> </p>
+              <% else %>
+                <p> No discount! </p>
+              <% end %>
+            </td>
           </tr>
         </section>
       <% end %>
